# OliveOilFinder

./: README.md  async_sync.md
Backend/: howto.md
Backend/rust-backend/: Cargo.toml  backend_inspiration.md  docker-compose.yml
Backend/rust-backend/migrations/2025-12-15-000000-0000_customer/: up.sql
Backend/rust-backend/src/: auth.rs  db_service.rs  delete_data.rs  handler.rs  model.rs  password_helper.rs  password_helper_argon.rs  schema.rs  update_data.rs
Backend/zero2pod/: Cargo.toml  projectscope.md
Backend/zero2pod/src/: main.rs
Backend/zeropod/: Cargo.toml  readme.md
Backend/zeropod/src/: lib.rs  main.rs
Backend/zeropod/tests/: health_check.rs
