[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
openssl = "0.10.75"
postgres = "0.19.12"
postgres-openssl = "0.5.2"
argon2 = "0.5"

####### 
acticx-web = "4.9.0"
diesel = {version="2.2.2", features = ["r2d2","postgres"]}
dotenv = "0.15.0"
env_logger = "0.11.5"
r2d2 = "0.8.10"
serde = {version="1.0.208",features = ["derive"]}
log = "0.4.22"
jsonwebtoken = "9.3.0"
actix-cors = "0.7.0"
sha2 = "0.11.0-pre.4"
hex = "0.4.3"
chrono = "0.4.38"


[[bin]]
name = "create_table"
path = "src/create_table.rs"

[[bin]]
name = "read_data"
path = "src/read_data.rs"

[[bin]]
name = "update_data"
path = "src/update_data.rs"

[[bin]]
name = "delete_data"
path = "src/delete_data.rs"